ui: unify clear buttons bugfix: spinner loc, style feat: on region select, open region expansion panel fix: vbc height on mobile

--- a/src/viewerModule/viewerCmp/viewerCmp.style.scss
+++ b/src/viewerModule/viewerCmp/viewerCmp.style.scss
@@ -139,7 +139,7 @@ viewer-wrapper
 
 sxplr-vertical-bread-crumb
 {
-  max-height: 98vh;
+  max-height: 98dvh;
   overflow: auto;
   pointer-events: all;
 }
